[gd_scene load_steps=19 format=3 uid="uid://ccfupsu1n571a"]

[ext_resource type="Texture2D" uid="uid://cmg8gwgmmes6j" path="res://sprites/farmer_sprites.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://ibllknbk1h0a" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="AudioStream" uid="uid://dxoysp35mered" path="res://sounds/269309__kwahmah_02__swoosh03.wav" id="3_qhqgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sweqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": false,
"name": &"attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.71,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 2.21,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 2.01,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.21,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4flbx"]
size = Vector2(20, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 22.022715

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["player"]]
position = Vector2(30, 38)
sprite_frames = SubResource("SpriteFrames_sweqy")
animation = &"attack"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(28, 43)
shape = SubResource("RectangleShape2D_4flbx")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" groups=["player"]]
position = Vector2(49, 50)
shape = SubResource("CircleShape2D_g2els")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackArea" groups=["player"]]
position = Vector2(15, 51)
shape = SubResource("CircleShape2D_g2els")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
